--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,27 +20,39 @@ else()
   )
 endif()
 
-if("${THEROCK_SANITIZER}" STREQUAL "")
-  add_test(
-    NAME therock-examples-cpp-sdk-user
-    COMMAND
-      "${CMAKE_COMMAND}" -E env "CMAKE_PREFIX_PATH=${THEROCK_BINARY_DIR}/dist/rocm" --
-      "${CMAKE_COMMAND}"
-          "-DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}/cpp-sdk-user"
-          "-DBINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}/cpp-sdk-user"
-          "-DGENERATOR=${CMAKE_GENERATOR}"
-          "-DTHEROCK_ENABLE_BLAS=${THEROCK_ENABLE_BLAS}"
-          "-DTHEROCK_ENABLE_FFT=${THEROCK_ENABLE_FFT}"
-          "-DTHEROCK_ENABLE_HIP=${THEROCK_ENABLE_HIP_RUNTIME}"
-          "-DTHEROCK_ENABLE_HIPDNN=${THEROCK_ENABLE_HIPDNN}"
-          "-DTHEROCK_ENABLE_MIOPEN=${THEROCK_ENABLE_MIOPEN}"
-          "-DTHEROCK_ENABLE_PRIM=${THEROCK_ENABLE_PRIM}"
-          "-DTHEROCK_ENABLE_RAND=${THEROCK_ENABLE_RAND}"
-          "-DTHEROCK_ENABLE_RCCL=${THEROCK_ENABLE_RCCL}"
-          "-DTHEROCK_ENABLE_ROCWMMA=${THEROCK_ENABLE_ROCWMMA}"
-          "-DTHEROCK_ENABLE_SOLVER=${THEROCK_ENABLE_SOLVER}"
-          "-DTHEROCK_ENABLE_SPARSE=${THEROCK_ENABLE_SPARSE}"
-          ${HIP_CMAKE_ARGS}
-        -P "${CMAKE_CURRENT_SOURCE_DIR}/clean_configure_test_project.cmake"
+set(_sanitizer_args "")
+if(NOT "${THEROCK_SANITIZER}" STREQUAL "")
+  list(APPEND _sanitizer_args
+    "-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}"
+    "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}"
+    "-DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}"
+    "-DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}"
+    "-DCMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}"
   )
 endif()
+
+add_test(
+  NAME therock-examples-cpp-sdk-user
+  COMMAND
+    "${CMAKE_COMMAND}" -E env
+      "CMAKE_PREFIX_PATH=${THEROCK_BINARY_DIR}/dist/rocm"
+    --
+    "${CMAKE_COMMAND}"
+      "-DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}/cpp-sdk-user"
+      "-DBINARY_DIR=${CMAKE_CURRENT_BINARY_DIR}/cpp-sdk-user"
+      "-DGENERATOR=${CMAKE_GENERATOR}"
+      "-DTHEROCK_ENABLE_BLAS=${THEROCK_ENABLE_BLAS}"
+      "-DTHEROCK_ENABLE_FFT=${THEROCK_ENABLE_FFT}"
+      "-DTHEROCK_ENABLE_HIP=${THEROCK_ENABLE_HIP_RUNTIME}"
+      "-DTHEROCK_ENABLE_HIPDNN=${THEROCK_ENABLE_HIPDNN}"
+      "-DTHEROCK_ENABLE_MIOPEN=${THEROCK_ENABLE_MIOPEN}"
+      "-DTHEROCK_ENABLE_PRIM=${THEROCK_ENABLE_PRIM}"
+      "-DTHEROCK_ENABLE_RAND=${THEROCK_ENABLE_RAND}"
+      "-DTHEROCK_ENABLE_RCCL=${THEROCK_ENABLE_RCCL}"
+      "-DTHEROCK_ENABLE_ROCWMMA=${THEROCK_ENABLE_ROCWMMA}"
+      "-DTHEROCK_ENABLE_SOLVER=${THEROCK_ENABLE_SOLVER}"
+      "-DTHEROCK_ENABLE_SPARSE=${THEROCK_ENABLE_SPARSE}"
+      ${HIP_CMAKE_ARGS}
+      ${_sanitizer_args}
+      -P "${CMAKE_CURRENT_SOURCE_DIR}/clean_configure_test_project.cmake"
+)
