add hipclr to samples build.

--- a/ml-libs/CMakeLists.txt
+++ b/ml-libs/CMakeLists.txt
@@ -274,6 +274,7 @@ if(THEROCK_ENABLE_HIPDNN_SAMPLES)
       amd-hip
     BUILD_DEPS
       hipDNN
+      hip-clr
       therock-flatbuffers
       therock-nlohmann-json
       therock-fmt
