--- a/BUILD_TOPOLOGY.toml
+++ b/BUILD_TOPOLOGY.toml
@@ -129,6 +129,7 @@ artifact_groups = ["third-party-sysdeps", "base"]
 description = "Compiler, runtimes, and core profiling"
 artifact_groups = [
     "compiler",
+    "core-amdsmi",
     "core-runtime",
     "third-party-libs",
     "hip-runtime",
@@ -191,7 +192,13 @@ artifact_group_deps = []
 source_sets = ["base", "rocm-systems"]
 
 [artifact_groups.core-runtime]
-description = "Core runtime (amdsmi, ROCR-Runtime, rocminfo)"
+description = "Core runtime (ROCR-Runtime, rocminfo)"
+type = "generic"
+artifact_group_deps = ["base", "third-party-sysdeps"]
+source_sets = ["rocm-systems"]
+
+[artifact_groups.core-amdsmi]
+description = "AMD SMI tool (amdsmi)"
 type = "generic"
 artifact_group_deps = ["base", "third-party-sysdeps"]
 source_sets = ["rocm-systems"]
@@ -249,9 +256,9 @@ source_sets = ["rocm-systems"]  # rocprofiler-sdk is in rocm-systems
 [artifact_groups.dctools-core]
 description = "Data center management tools with minimal dependencies"
 type = "generic"
-artifact_group_deps = ["core-runtime", "profiler-core"]
+artifact_group_deps = ["core-runtime", "core-amdsmi", "profiler-core"]
 # TODO: rocm-systems included for projects/hip/VERSION (see CMakeLists.txt)
-source_sets = ["base", "core", "rocm-systems"]  # RDC uses amdsmi from core
+source_sets = ["base", "rocm-systems"]  # RDC uses amdsmi from core-amdsmi
 
 # Future artifact groups
 # [artifact_groups.dctools-rocm]
@@ -374,6 +381,14 @@ artifact_group = "core-runtime"
 type = "target-neutral"
 artifact_deps = ["base", "sysdeps", "amd-llvm"]
 feature_name = "CORE_RUNTIME"
+feature_group = "CORE"
+disable_platforms = ["windows"]
+
+[artifacts.core-amdsmi]
+artifact_group = "core-amdsmi"
+type = "target-neutral"
+artifact_deps = ["base", "sysdeps"]
+feature_name = "CORE_AMDSMI"
 feature_group = "CORE"
 disable_platforms = ["windows"]
 
@@ -515,7 +530,7 @@ disable_platforms = ["windows"]
 [artifacts.rdc]
 artifact_group = "dctools-core"
 type = "target-neutral"
-artifact_deps = ["core-hip", "rocprofiler-sdk", "sysdeps"]
+artifact_deps = ["core-hip", "rocprofiler-sdk", "sysdeps", "core-amdsmi"]
 feature_group = "DC_TOOLS"  # Part of DC tools, enabled by default via THEROCK_ENABLE_ALL
 disable_platforms = ["windows"]
 
