--- a/core/artifact-core-amdsmi.toml
+++ b/core/artifact-core-amdsmi.toml
@@ -10,12 +10,12 @@ optional = "windows"
 
 [components.lib."core/amdsmi/stage"]
 optional = "windows"
+include = [ "lib/**" ]
 
 [components.run."core/amdsmi/stage"]
 optional = "windows"
 include = [
   "bin/**",
-  "lib/**",
   "libexec/**",
   "share/amd_smi/**",
 ]
