--- a/.github/workflows/new_ci_weekly.yml
+++ b/.github/workflows/new_ci_weekly.yml
@@ -23,6 +23,7 @@ on:
       linux_use_prebuilt_artifacts:
         type: boolean
         description: "If enabled, the CI will pull Linux artifacts using artifact_run_id and only run tests"
+        default: false
       windows_amdgpu_families:
         type: string
         description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
@@ -34,6 +35,7 @@ on:
       windows_use_prebuilt_artifacts:
         type: boolean
         description: "If enabled, the CI will pull Windows artifacts using artifact_run_id and only run tests"
+        default: false
       artifact_run_id:
         type: string
         description: "If provided, the tests will run on this artifact ID"
@@ -51,6 +53,7 @@ on:
       linux_use_prebuilt_artifacts:
         type: boolean
         description: "If enabled, the CI will pull Linux artifacts using artifact_run_id and only run tests"
+        default: false
       windows_amdgpu_families:
         type: string
         description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
@@ -62,6 +65,7 @@ on:
       windows_use_prebuilt_artifacts:
         type: boolean
         description: "If enabled, the CI will pull Windows artifacts using artifact_run_id and only run tests"
+        default: false
       artifact_run_id:
         type: string
         description: "If provided, the tests will run on this artifact ID"
@@ -105,7 +109,7 @@ jobs:
       # ghcr.io/rocm/therock_build_manylinux_x86_64:users-lpromber-DockerCmake4
       container_image_linux: "ghcr.io/rocm/therock_build_manylinux_x86_64@sha256:57b5cd3769d7a865500690258a530d3db6a277234ebf3379945de7bce3973301"
       # we always want to build and not use artifacts
-      force_build: "true"
+      force_build: true
 
   weekly_linux_cmake4_build_and_test:
     name: 'Weekly: Linux CMake 4'
