--- a/math-libs/BLAS/artifact-blas.toml
+++ b/math-libs/BLAS/artifact-blas.toml
@@ -19,6 +19,19 @@ include = [
 ]
 optional = true
 
+# Origami
+[components.dbg."math-libs/BLAS/Origami/stage"]
+optional = true
+[components.dev."math-libs/BLAS/Origami/stage"]
+optional = true
+[components.lib."math-libs/BLAS/Origami/stage"]
+optional = true
+[components.test."math-libs/BLAS/Origami/stage"]
+include = [
+  "bin/origami-tests*",
+]
+optional = true
+
 # hipBLAS
 [components.dbg."math-libs/BLAS/hipBLAS/stage"]
 [components.dev."math-libs/BLAS/hipBLAS/stage"]
