--- a/math-libs/BLAS/CMakeLists.txt
+++ b/math-libs/BLAS/CMakeLists.txt
@@ -437,6 +437,8 @@ if(THEROCK_ENABLE_SOLVER)
   list(APPEND hipBLAS_optional_deps rocSOLVER)
 endif()
 if(THEROCK_BUILD_TESTING)
+  # Note: hipBLAS tests require ILP64 host blas
+  # https://rocm.docs.amd.com/projects/hipBLAS/en/latest/install/Linux_Install_Guide.html#dependencies-for-building-the-library
   list(APPEND hipBLAS_optional_deps therock-host-blas-64)
 endif()
 
