[debug-tools/rocgdb] Move rocgdb checkout
Move rocgdb checkout to debug-tools/rocgdb/source so we can hold the
CMakeLists.txt wrapper under debug-tools/rocgdb.

This way the cmake file gets picked up without having to copy it to
debug-tools/rocgdb/source.

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,7 +61,7 @@
 	url = https://github.com/ROCm/ROCdbgapi.git
 	branch = amd-staging
 [submodule "rocgdb"]
-	path = debug-tools/rocgdb
+	path = debug-tools/rocgdb/source
 	url = https://github.com/ROCm/rocgdb.git
 	branch = amd-staging
 [submodule "rocr-debug-agent"]
